# sample-project

./: CMakeLists.txt  README.md  word_count.cpp
